made save score save 10 scores instead of 100, fixed overflow problems

--- a/John/src/spacex33/style.css
+++ b/John/src/spacex33/style.css
@@ -1,8 +1,12 @@
     #pane{
-        -fx-background-image: url("file:resource/Images/space_background.png");
+        -fx-background-image: url("file:resource/Images/static_back.png");
         -fx-background-repeat: stretch;   
         -fx-background-size: 750 950;
         -fx-background-position: center center;
+    }
+    
+    .text{
+        -fx-text-fill: white;
     }
 
 
